0.22.0+dismine.2 - unreleased
-------------------

* Code refactoring.
* Update requirements for django-tagging and django-xmlrpc.

0.22.0+dismine.1 - 2022/12/15
-------------------

* Drop support for Django<3.1.
* Fix paginating to second page without breadcrumbs.

0.22.0-hk - 2022/12/02
-------------------

* Fix backwards incompatible shortened URLs to include trailing slash
* Fix unicode compatibility for author names
* Fix week 0 bug where the wrong template would be used for week 0 as it is falsy
* Re-instate Django 2.2 compatibility
* General test updating

0.21.3 - 2021/02/25
-------------------

* Release to fix some converter regex with escape character.

0.21.2 - 2021/02/25
-------------------

* Another release to fix package installation.

0.21.1 - 2021/02/25
-------------------

* New release to fix package publishing on Pypi, no other changes.

0.21.0 - 2021/02/25
-------------------

* Drop support for Django<3.1;
* Migrated urls from "url()" to "path()" with pattern converters;
* Use 'force_str()' instead of deprecated 'force_text()';
* Remove 'providing_args' argument in Signals;


0.20.1 - 2021/02/23
-------------------

* Some fixes for Django>=3.0 support;

0.20
----

* Remove compatibility with Django 1.x
* Remove code for Python 2.0
* Documentation improvements

https://github.com/Fantomas42/django-blog-zinnia/compare/v0.19...v0.20

0.19
----

* Compatibility with Django 1.11
* Fix Threading issues in tests
* Improve comparison of entries
* Send mail to staff in case of comment moderation
* Implement spam-checkers on Pingbacks and Trackbacks
* Return the number of entries in the category_tree templatetag
* Integration via BrowserSync

https://github.com/Fantomas42/django-blog-zinnia/compare/v0.18.1...v0.19

0.18.1
------

* Fix messed relationships in Python 3

https://github.com/Fantomas42/django-blog-zinnia/compare/v0.18...v0.18.1

0.18
-----

* Compatibility with Django 1.10
