@@ -5,14 +5,12 @@
 <tr>
   <th>
     {% with entry=linkback.content_object %}
-    {% blocktranslate with linkback_url=linkback.url linkback_name=linkback.name linkback_type=linkback.flags.all.0.flag linkback_pk=linkback.pk entry_url=entry.get_absolute_url entry_title=entry.title trimmed %}
-    <a href="{{ linkback_url }}">{{ linkback_name }}</a>
-    made a linkback on
-    <a href="{{ entry_url }}#{{ linkback_type }}-{{ linkback_pk }}"
-       title="Linkback on {{ entry_title }}">
-      {{ entry_title }}
+    <a href="{{ linkback.url }}">{{ linkback.name }}</a>
+    {% translate "made a linkback on" context "url" %}
+    <a href="{{ entry.get_absolute_url }}#{{ linkback.flags.all.0.flag }}-{{ linkback.pk }}"
+       title="{% translate "Linkback on" context "entry title" %} {{ entry.title }}">
+      {{ entry.title }}
     </a>
-    {% endblocktranslate %}
     {% endwith %}
     {{ linkback.comment|truncatewords:20|linebreaks }}
   </th>
