@@ -16,14 +16,12 @@
       <img src="{% get_gravatar comment.email 60 "G" %}"
            class="gravatar photo" alt="{{ comment.name }}" />
       <p class="comment-info">
-        {% blocktranslate with comment_url=comment.url|default:"#" comment_name=comment.name comment_human_date=comment.submit_date|date:"SHORT_DATETIME_FORMAT" comment_technical_date=comment.submit_date|date:"c" trimmed %}
-        <a href="{{ comment_url }}" rel="external nofollow"
-           class="fn url">{{ comment_name }}</a>
-        on
-        <time class="comment-published" datetime="{{ comment_technical_date }}">
-          {{ comment_human_date }}
+        <a href="{{ comment.url|default:"#" }}" rel="external nofollow"
+           class="fn url">{{ comment.name }}</a>
+        {% translate "on" context "time" %}
+        <time class="comment-published" datetime="{{ comment.submit_date|date:"c" }}">
+          {{ comment.submit_date|date:"SHORT_DATETIME_FORMAT" }}
         </time>
-        {% endblocktranslate %}
       </p>
       {{ comment.comment|linebreaks }}
     </li>
