@@ -105,17 +105,15 @@
     <li id="pingback-{{ pingback.pk }}" class="pingback vcard {% cycle 'box1' 'box2' %}">
       {% block pingback-info %}
       <p class="pingback-info">
-        {% blocktranslate with pingback_url=pingback.url pingback_name=pingback.name pingback_human_date=pingback.submit_date|date:"SHORT_DATETIME_FORMAT" pingback_technical_date=pingback.submit_date|date:"c" pingback_pk=pingback.pk trimmed %}
-	<a href="{{ pingback_url }}" rel="external nofollow"
-           class="fn url org">{{ pingback_name }}</a>
-	on
-        <time class="pingback-published" datetime="{{ pingback_technical_date }}">
-          {{ pingback_human_date }}
+        <a href="{{ pingback.url }}" rel="external nofollow"
+           class="fn url org">{{ pingback.name }}</a>
+	{% translate "on" context "time" %}
+        <time class="pingback-published" datetime="{{ pingback.submit_date|date:"c" }}">
+          {{ pingback.submit_date|date:"SHORT_DATETIME_FORMAT" }}
         </time>
-        <a href="#pingback-{{ pingback_pk }}"
-           id="c{{ pingback_pk }}" class="anchor-link"
-           title="Direct link to this pingback">#</a>
-        {% endblocktranslate %}
+        <a href="#pingback-{{ pingback.pk }}"
+           id="c{{ pingback.pk }}" class="anchor-link"
+           title="{% translate "Direct link to this pingback" %}">#</a>
       </p>
       {% endblock pingback-info %}
       {% block pingback-content %}
@@ -151,17 +149,15 @@
     <li id="trackback-{{ trackback.pk }}" class="trackback vcard {% cycle 'box1' 'box2' %}">
       {% block trackback-info %}
       <p class="trackback-info">
-        {% blocktranslate with trackback_url=trackback.url trackback_name=trackback.name trackback_human_date=trackback.submit_date|date:"SHORT_DATETIME_FORMAT" trackback_technical_date=trackback.submit_date|date:"c" trackback_pk=trackback.pk trimmed %}
-	<a href="{{ trackback_url }}" rel="external nofollow"
-           class="fn url org">{{ trackback_name }}</a>
-	on
-        <time class="trackback-published" datetime="{{ trackback_technical_date }}">
-          {{ trackback_human_date }}
+        <a href="{{ trackback.url }}" rel="external nofollow"
+           class="fn url org">{{ trackback.name }}</a>
+	{% translate "on" context "time" %}
+        <time class="trackback-published" datetime="{{ trackback.submit_date|date:"c" }}">
+          {{ trackback.submit_date|date:"SHORT_DATETIME_FORMAT" }}
         </time>
-        <a href="#trackback-{{ trackback_pk }}"
-           id="c{{ trackback_pk }}" class="anchor-link"
-           title="Direct link to this trackback">#</a>
-        {% endblocktranslate %}
+        <a href="#trackback-{{ trackback.pk }}"
+           id="c{{ trackback.pk }}" class="anchor-link"
+           title="{% translate "Direct link to this trackback" %}">#</a>
       </p>
       {% endblock trackback-info %}
       {% block trackback-content %}
@@ -203,17 +199,15 @@
       {% endblock comment-image %}
       {% block comment-info %}
       <p class="comment-info">
-        {% blocktranslate with comment_url=comment.url|default:"#" comment_name=comment.name comment_human_date=comment.submit_date|date:"SHORT_DATETIME_FORMAT" comment_technical_date=comment.submit_date|date:"c" comment_pk=comment.pk comment_author_slug=comment.user_name|slugify trimmed %}
-        <a href="{{ comment_url }}" rel="external nofollow"
-           class="fn url">{{ comment_name }}</a>
-        on
-        <time class="comment-published" datetime="{{ comment_technical_date }}">
-          {{ comment_human_date }}
+        <a href="{{ comment.url|default:"#" }}" rel="external nofollow"
+           class="fn url">{{ comment.name }}</a>
+        {% translate "on" context "time" %}
+        <time class="comment-published" datetime="{{ comment.submit_date|date:"c" }}">
+          {{ comment.submit_date|date:"SHORT_DATETIME_FORMAT" }}
         </time>
-        <a href="#comment-{{ comment_pk }}-by-{{ comment_author_slug }}"
-           id="c{{ comment_pk }}" class="anchor-link"
-           title="Direct link to this comment">#</a>
-        {% endblocktranslate %}
+        <a href="#comment-{{ comment.pk }}-by-{{ comment.user_name|slugify }}"
+           id="c{{ comment.pk }}" class="anchor-link"
+           title="{% translate "Direct link to this comment" %}">#</a>
       </p>
       {% endblock comment-info %}
       {% block comment-content %}
